--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <H1>Hello World</H1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis unde necessitatibus accusantium nemo velit facere odit quod, cupiditate vitae et quasi earum quam culpa explicabo incidunt a dolorem quas magnam.</p>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fit%2Ffoto%2Fgatti-giocano-a-calcio-gm484573428-71834569&psig=AOvVaw0Z8D4C9VgF1BPuYWqbAP29&ust=1641995682330000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCJjXut_sqfUCFQAAAAAdAAAAABAD" alt="">
+    <img src="https://media.istockphoto.com/photos/cats-play-soccer-picture-id484573428?s=612x612" alt="">
 
 </body>
 </html>
